@@ -1,0 +1,2 @@
+Devlog - TODO:
+- Rename label functions for output for better readability. 
