@@ -1,14 +1,16 @@
 ﻿
 Microsoft Visual Studio Solution File, Format Version 12.00
 # Visual Studio Version 17
-VisualStudioVersion = 17.14.36121.58 d17.14
+VisualStudioVersion = 17.14.36121.58
 MinimumVisualStudioVersion = 10.0.40219.1
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "practice_calculator", "practice_calculator\practice_calculator.vcxproj", "{22F00094-F803-2925-0797-37EAD8EDFBBB}"
 EndProject
 Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Solution Items", "Solution Items", "{8EC462FD-D22E-90A8-E5CE-7E832BA40C5D}"
 	ProjectSection(SolutionItems) = preProject
 		changelog.txt = changelog.txt
+		bug_tracker.txt = bug_tracker.txt
 		readme.txt = readme.txt
+		TextFile1.txt = TextFile1.txt
 	EndProjectSection
 EndProject
 Global
